--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                        <span class="text">olobosd@gmail.com</span>
+                        <span class="text"><a href="mailto:olobosd@gmail.com">olobosd@gmail.com</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
-                        <span class="text">https://bit.ly/3mBHJeo</span>
+                        <span class="text"><a href="https://bit.ly/3mBHJeo">https://bit.ly/3mBHJeo</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
@@ -44,7 +44,7 @@
                 <ul>
                     <li>
                         <h5>2017 - Present</h5>
-                        <h4>Software Engineer</h4>
+                        <h4>Software Enginering</h4>
                         <h4>DUOC UC - Antonio Varas</h4>
                     </li>
                     <li>
