--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="right_side">
             <div class="about">
                 <h2 class="title2">Profile</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, quaerat, quo doloremque error deleniti neque quos, incidunt tenetur provident porro ex? Repudiandae suscipit sit facere reprehenderit laboriosam blanditiis, qui perferendis.</p>
+                <p>Innovative, detail-oriented professional with 2+ years of experience in Salesforce Development across diverse industries. Ability to assess and manage complex obstacles; viewed as a proficient troubleshooter. Always willing to learn, and share knowledge with teammates; have onboarded several new colleagues. Preparing Salesforce developer certificacion.</p>
             </div>
             <div class="about">
                 <h2 class="title2">Experience</h2>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="text">
                         <h4>Salesforce Developer</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptas repellat, quos facilis libero a quaerat architecto ut tempore quis numquam sunt magni blanditiis aperiam illo, quisquam fuga quam? Quam.</p>
+                        <p>Salesforce developer for Banco Estado. Playing a similar role developing as described in the last experience; adding the development of AURA and Lightning Web Components to the role. Served as techno-functional developer by translating functional and design specifications into technical concepts. Onboarded various colleagues. Improved the overall Salesforce knoledge. </p>
                     </div>
                 </div>
                 <div class="box">
@@ -101,7 +101,7 @@
                     </div>
                     <div class="text">
                         <h4>Salesforce Developer</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptas repellat, quos facilis libero a quaerat architecto ut tempore quis numquam sunt magni blanditiis aperiam illo, quisquam fuga quam? Quam.</p>
+                        <p>Salesforce developer for various clients. Implementing integrations between several platforms via API REST/SOAP, APEX classes and triggers. Learned the basics of Salesforce (objects, relationships, user and profiles, etc.) and specialized in SF Sales Cloud. </p>
                     </div>
                 </div>
                 <div class="box">
