--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                     <div class="text">
                         <h4>Salesforce Developer</h4>
-                        <p>Salesforce developer for Banco Estado. Playing a similar role developing as described in the last experience; adding the development of AURA and Lightning Web Components to the role. Served as techno-functional developer by translating functional and design specifications into technical concepts. Onboarded various colleagues. Improved the overall Salesforce knoledge. </p>
+                        <p>Salesforce developer for Banco Estado. Playing a similar role developing as described in the last experience; adding the development of AURA and Lightning Web Components to the role. Served as techno-functional developer by translating functional and design specifications into technical concepts. Onboarded various colleagues. Improved the overall Salesforce knowledge. </p>
                     </div>
                 </div>
                 <div class="box">
