--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="right_side">
             <div class="about">
                 <h2 class="title2">Profile</h2>
-                <p>Innovative, detail-oriented professional with 2+ years of experience in Salesforce Development across diverse industries. Ability to assess and manage complex obstacles; viewed as a proficient troubleshooter. Always willing to learn, and share knowledge with teammates; have onboarded several new colleagues. Preparing Salesforce developer certificacion.</p>
+                <p>Innovative, detail-oriented professional with 2+ years of experience in Salesforce Development across diverse industries. Ability to assess and manage complex obstacles; viewed as a proficient troubleshooter. Always willing to learn, and share knowledge with teammates. Preparing Salesforce developer certificacion.</p>
             </div>
             <div class="about">
                 <h2 class="title2">Experience</h2>
