--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h3 class="title">Education</h3>
                 <ul>
                     <li>
-                        <h5>2017 - Present</h5>
+                        <h5>2017 - 2021</h5>
                         <h4>Software Enginering</h4>
                         <h4>DUOC UC - Antonio Varas</h4>
                     </li>
@@ -86,7 +86,16 @@
                 <h2 class="title2">Experience</h2>
                 <div class="box">
                     <div class="year_company">
-                        <h5>2020 - Present</h5>
+                        <h5>2020 - 2021</h5>
+                        <h5>Kibernum</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Salesforce Developer</h4>
+                        <p>Salesforce developer for Banco Estado. Playing a similar role developing as described in the last experience; adding the development of AURA and Lightning Web Components to the role. Served as techno-functional developer by translating functional and design specifications into technical concepts. Onboarded various colleagues. Improved the overall Salesforce knowledge. </p>
+                    </div>
+                <div class="box">
+                    <div class="year_company">
+                        <h5>2020 - 2021</h5>
                         <h5>Kibernum</h5>
                     </div>
                     <div class="text">
