update on experiences

--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@
         <div class="right_side">
             <div class="about">
                 <h2 class="title2">Profile</h2>
-                <p>Innovative, detail-oriented professional with 2+ years of experience in Salesforce Development across diverse industries. Ability to assess and manage complex obstacles; viewed as a proficient troubleshooter. Always willing to learn, and share knowledge with teammates. Preparing Salesforce developer certificacion.</p>
+                <p>Innovative, detail-oriented professional with 3+ years of experience in Salesforce Development across diverse industries. Ability to assess and manage complex obstacles; viewed as a proficient troubleshooter. Always willing to learn, and share knowledge with teammates. Preparing Salesforce developer certificacion.</p>
             </div>
             <div class="about">
                 <h2 class="title2">Experience</h2>
                 <div class="box">
                     <div class="year_company">
-                        <h5>2020 - 2021</h5>
-                        <h5>Kibernum</h5>
+                        <h5>2021 - Current</h5>
+                        <h5>Seidor</h5>
                     </div>
                     <div class="text">
                         <h4>Salesforce Developer</h4>
-                        <p>Salesforce developer for Banco Estado. Playing a similar role developing as described in the last experience; adding the development of AURA and Lightning Web Components to the role. Served as techno-functional developer by translating functional and design specifications into technical concepts. Onboarded various colleagues. Improved the overall Salesforce knowledge. </p>
+                        <p>Working on several projects. Integrations, development, and offering other technical solutions for the clients across multiple business. </p>
                     </div>
                 </div>
                                 <div class="box">
@@ -101,7 +101,7 @@
                     </div>
                     <div class="text">
                         <h4>Salesforce Developer</h4>
-                        <p>Salesforce developer for Banco Estado. Playing a similar role developing as described in the last experience; adding the development of AURA and Lightning Web Components to the role. Served as techno-functional developer by translating functional and design specifications into technical concepts. Onboarded various colleagues. Improved the overall Salesforce knowledge. </p>
+                        <p>Playing a similar role developing as described in the last experience; adding the development of AURA and Lightning Web Components to the role. Served as techno-functional developer by translating functional and design specifications into technical concepts. Onboarded various colleagues. Improved the overall Salesforce knowledge. </p>
                     </div>
                 </div>
                 <div class="box">
@@ -111,7 +111,7 @@
                     </div>
                     <div class="text">
                         <h4>Salesforce Developer</h4>
-                        <p>Salesforce developer for various clients. Implementing integrations between several platforms via API REST/SOAP, APEX classes and triggers. Learned the basics of Salesforce (objects, relationships, user and profiles, etc.) and specialized in SF Sales Cloud. </p>
+                        <p>Implementing integrations between several platforms via API REST/SOAP, APEX classes and triggers. Learned the basics of Salesforce (objects, relationships, user and profiles, etc.) and specialized in SF Sales Cloud. </p>
                     </div>
                 </div>
                 <div class="box">
